--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,3 +188,69 @@ button {
     bottom: 0;
     left: 0;
 }
+
+@media screen and (max-width: 980px) {
+    .main{
+        width: 500px;
+        margin-left: 100px;
+    }
+    .nav-list{
+        margin-right: 100px;
+    }
+    .nav-name{
+        margin-left: 100px;
+    }
+}
+
+@media screen and (max-width: 768px) {
+
+    .main{
+        width: 500px;
+        margin-left: 100px;
+    }
+    .nav-list{
+        width: 300px; 
+        margin-right: 0px;
+    }
+    .nav-name{
+        width: 200px;
+        margin-left: 100px;
+    }
+
+}
+
+@media screen and (max-width: 640px) {
+
+
+    .main{
+        width: 500px;
+        margin: auto;
+    }
+
+    .main-nav{
+        height: 100px;
+    }
+    .nav-list{
+        width: 100%;
+        position: absolute;
+        bottom: 0;
+        height: 30px;
+        margin: 0px;
+        padding-top: 60px;
+        padding-bottom: 0px;
+        text-align: center;
+    }
+    .nav-name{
+        width: 100%;
+        height: 50px;
+        margin-left: 0;
+        clear: both;
+        position: absolute;
+        top:0;
+        padding: 0;
+        margin: 0;
+
+    }
+
+}
+
