--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -206,6 +206,18 @@ button {
         margin-right: 40px;
     }
 
+    .label{
+        margin-left: 20px;
+    }
+
+    .inputfld{
+        margin-left:20px;
+    }
+
+    button{
+        margin-left: 20px;
+    }
+
 }
 
 @media screen and (max-width: 768px) {
@@ -238,6 +250,7 @@ button {
     .main{
         width: 500px;
         margin: auto;
+        margin-top: 30px;
     }
 
     .main-nav{
