--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,6 +118,7 @@ a:visited {
     float: left;
     margin-left: 40px;
     margin-bottom: 40px;
+    margin-top: 10px; 
     height: 150px;
     width: 150px;
     background-image: url("https://via.placeholder.com/150");
@@ -129,6 +130,7 @@ a:visited {
     margin-left: 40px;
     margin-right: 500px;
     margin-bottom: 40px;
+    margin-top: 10px; 
     height: 150px;
     width: 150px;
     background-image: url("https://via.placeholder.com/150");
